--- a/gradle.properties
+++ b/gradle.properties
@@ -10,10 +10,11 @@ loader_version=0.16.14
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.2.1
+mod_version=1.3.0
 maven_group=us.minecraftchest2.emberborn
 archives_base_name=emberborn
 
 # Dependencies
 fabric_version=0.130.0+1.21.8
+rei_version=20.0.811
 
